--- a/affiliate.html
+++ b/affiliate.html
@@ -13,10 +13,6 @@
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"></script>
-		<script
-			async
-			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-			crossorigin="anonymous"></script>
 	</head>
 	<style>
 		* {
@@ -30,6 +26,25 @@
 		a:active {
 			color: #0072ff;
 			text-decoration: none;
+		}
+		#adsByAdsterra {
+			background: #fff;
+			height: 100vh;
+			left: 0;
+			overflow: scroll;
+			overflow-x: visible;
+			padding: calc(10px * var(--scale));
+			position: fixed;
+			top: 0;
+			width: calc(488px * var(--scale));
+			z-index: 1000;
+		}
+		#adsByAdsterra iframe {
+			height: calc(60px * var(--scale)) !important;
+			width: calc(468px * var(--scale)) !important;
+		}
+		#adsByAdsterra::-webkit-scrollbar {
+			width: 0;
 		}
 		#donation {
 			align-items: center;
@@ -168,7 +183,7 @@
 		main div p:not(:first-child) {
 			padding: calc(10px * var(--scale)) 0 calc(5px * var(--scale)) 0;
 		}
-		main iframe {
+		main .ytvideo {
 			aspect-ratio: 16/9;
 			display: inline;
 			width: 49%;
@@ -178,8 +193,171 @@
 			font-weight: 300;
 			margin-left: calc(22px * var(--scale));
 		}
+		#closeAds {
+			aspect-ratio: 1/1 !important;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			position: fixed;
+			top: calc(20px * var(--scale));
+			left: calc(500px * var(--scale));
+			padding: 10px;
+			background: #000;
+			color: #fff;
+			font-size: 24px;
+			cursor: pointer;
+			z-index: 1001;
+			width: calc(40px * var(--scale));
+		}
 	</style>
 	<body>
+		<div id="closeAds">x</div>
+		<div id="adsByAdsterra">
+			<h2>
+				This section helps us keep the extension running, consider
+				enabling ads on this page or consider giving donations to keep this extension running!!
+			</h2>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+		</div>
 		<div id="donation">
 			<h1>Happy with the extension!</h1>
 			<h2>Fuel the extension to keep it running!!</h2>
@@ -213,16 +391,6 @@
 						loading="lazy" />
 				</a>
 			</div>
-			<script type="text/javascript">
-				atOptions = {
-					'key' : 'e8105a7670134344bc98b1ea9766961c',
-					'format' : 'iframe',
-					'height' : 60,
-					'width' : 468,
-					'params' : {}
-				};
-				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-			</script>
 			<h2>
 				<a
 					href="https://chromewebstore.google.com/detail/eanofdhdfbcalhflpbdipkjjkoimeeod/reviews/my-review"
@@ -308,16 +476,6 @@
 						alt="Kofi"
 						loading="lazy" />
 				</a>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 			</div>
 			<h2>
 				Announcements & Updates (v1.4.0):
@@ -328,16 +486,6 @@
 					>Automate Your Mobile Searches</a
 				>
 			</h2>
-			<script type="text/javascript">
-				atOptions = {
-					'key' : 'e8105a7670134344bc98b1ea9766961c',
-					'format' : 'iframe',
-					'height' : 60,
-					'width' : 468,
-					'params' : {}
-				};
-				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-			</script>
 			<h3>
 				Mobile searches on desktop has been blocked by MS, Use this
 				website on your phone to automate your searches:
@@ -348,16 +496,6 @@
 					>Automate Your Mobile Searches</a
 				>
 			</h3>
-			<script type="text/javascript">
-				atOptions = {
-					'key' : 'e8105a7670134344bc98b1ea9766961c',
-					'format' : 'iframe',
-					'height' : 60,
-					'width' : 468,
-					'params' : {}
-				};
-				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-			</script>
 			<p>v1.4.0 has been launched for everyone</p>
 			<p>
 				This update introduces a brand-new feature allowing you to
@@ -368,40 +506,22 @@
 				debugging websites and testing mobile compatibility and
 				responsiveness.
 			</p>
-			<script type="text/javascript">
-				atOptions = {
-					'key' : 'e8105a7670134344bc98b1ea9766961c',
-					'format' : 'iframe',
-					'height' : 60,
-					'width' : 468,
-					'params' : {}
-				};
-				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-			</script>
 			<h2>Still confused how to install and use the extension?</h2>
 			<h3>Here is a step by step guide for you.</h3>
 			<iframe
+				class="ytvideo"
 				src="https://www.youtube.com/embed/5CU1gvnsaEg?si=88Gj0Cf5gxrLIuhc"
 				title="YouTube video player"
 				frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen></iframe>
 			<iframe
+				class="ytvideo"
 				src="https://www.youtube.com/embed/We1iXIlTuMo?si=2x_140udMgv5X2u2"
 				title="YouTube video player"
 				frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen></iframe>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 			<div id="howto">
 				<!-- <div id="install"> -->
 				<h4>Installation and Setup:</h4>
@@ -413,31 +533,11 @@
 						Click on "Add to Chrome" and confirm the installation.
 					</li>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<strong><p>Step 2: Accessing the Extension</p></strong>
 				<ol>
 					<li>Locate the extension icon in your browser toolbar.</li>
 					<li>Click on the icon to open Rewards Search Automator.</li>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<h4>Performing Searches (Search Tab)</h4>
 				<strong><p>Step 1: Manual Entry</p></strong>
 				<ol>
@@ -452,16 +552,6 @@
 					</li>
 					<li>Click "Search" to perform searches.</li>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<strong><p>Step 2: Predefined Search Buttons</p></strong>
 				<ol>
 					<li>
@@ -474,16 +564,6 @@
 					</li>
 					<li>Click "Search" to perform searches.</li>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<h4>Scheduling Searches (Schedule Tab):</h4>
 				<strong><p>Step 1: Accessing the Schedule Tab</p></strong>
 				<ol>
@@ -503,16 +583,6 @@
 						Choose from four predefined schedules: Never, Startup,
 						Every 5 Minutes, and Every 15 Minutes.
 					</li>
-					<script type="text/javascript">
-						atOptions = {
-							'key' : 'e8105a7670134344bc98b1ea9766961c',
-							'format' : 'iframe',
-							'height' : 60,
-							'width' : 468,
-							'params' : {}
-						};
-						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-					</script>
 					<strong
 						><p>
 							NOTE: Understand that "Every 5 Minutes" includes a
@@ -522,16 +592,6 @@
 						</p></strong
 					>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<h4>Footer Features:</h4>
 				<p>Important Links:</p>
 				<ol>
@@ -540,16 +600,6 @@
 						resources or support.
 					</li>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<p>Device Toggle Mode:</p>
 				<ol>
 					<li>
@@ -561,16 +611,6 @@
 						actual searches.
 					</li>
 				</ol>
-				<script type="text/javascript">
-					atOptions = {
-						'key' : 'e8105a7670134344bc98b1ea9766961c',
-						'format' : 'iframe',
-						'height' : 60,
-						'width' : 468,
-						'params' : {}
-					};
-					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-				</script>
 				<p>Mobile Device Name:</p>
 				<ol>
 					<li>View the allotted mobile device name.</li>
@@ -639,16 +679,6 @@
 							</ul>
 						</li>
 					</ol>
-					<script type="text/javascript">
-						atOptions = {
-							'key' : 'e8105a7670134344bc98b1ea9766961c',
-							'format' : 'iframe',
-							'height' : 60,
-							'width' : 468,
-							'params' : {}
-						};
-						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-					</script>
 				</details>
 				<details>
 					<summary>
@@ -676,16 +706,6 @@
 							</ul>
 						</li>
 					</ol>
-					<script type="text/javascript">
-						atOptions = {
-							'key' : 'e8105a7670134344bc98b1ea9766961c',
-							'format' : 'iframe',
-							'height' : 60,
-							'width' : 468,
-							'params' : {}
-						};
-						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-					</script>
 				</details>
 				<details>
 					<summary>Points Not Collected on First Search</summary>
@@ -701,16 +721,6 @@
 							</ul>
 						</li>
 					</ol>
-					<script type="text/javascript">
-						atOptions = {
-							'key' : 'e8105a7670134344bc98b1ea9766961c',
-							'format' : 'iframe',
-							'height' : 60,
-							'width' : 468,
-							'params' : {}
-						};
-						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-					</script>
 				</details>
 				<details>
 					<summary>Searches Are Not Performed</summary>
@@ -726,16 +736,6 @@
 							</ul>
 						</li>
 					</ol>
-					<script type="text/javascript">
-						atOptions = {
-							'key' : 'e8105a7670134344bc98b1ea9766961c',
-							'format' : 'iframe',
-							'height' : 60,
-							'width' : 468,
-							'params' : {}
-						};
-						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-					</script>
 				</details>
 				<details>
 					<summary>Schedule Not Working</summary>
@@ -764,16 +764,6 @@
 							</ul>
 						</li>
 					</ol>
-					<script type="text/javascript">
-						atOptions = {
-							'key' : 'e8105a7670134344bc98b1ea9766961c',
-							'format' : 'iframe',
-							'height' : 60,
-							'width' : 468,
-							'params' : {}
-						};
-						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-					</script>
 				</details>
 				<!-- <iframe src="https://livingshedhowever.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60" frameborder="0" id="ads"></iframe> -->
 				<!-- </div> -->
@@ -788,29 +778,21 @@
 					>@getprojectstech</a
 				>
 			</p>
-			<script type="text/javascript">
-				atOptions = {
-					'key' : 'e8105a7670134344bc98b1ea9766961c',
-					'format' : 'iframe',
-					'height' : 60,
-					'width' : 468,
-					'params' : {}
-				};
-				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
-			</script>
 		</main>
 	</body>
 	<script>
-		// (adsbygoogle = window.adsbygoogle || []).push({});
 		const width = screen.width;
 		const scale = width / 1920;
-		console.log(scale);
 		$("body").css("--scale", scale);
 		$(document).ready(function () {
 			const width = screen.width;
 			const scale = width / 1920;
-			console.log(scale);
 			$("body").css("--scale", scale);
+			setTimeout(() => {
+				const width = screen.width;
+				const scale = width / 1920;
+				$("body").css("--scale", scale);
+			}, 10000);
 			const users = $("#users");
 			const set1 = $("#set1");
 			const set2 = $("#set2");
@@ -841,6 +823,12 @@
 					$("#qrs2").css("display", "none");
 					// console.log("#donation is now visible");
 				}
+			});
+			const closeAds = $("#closeAds");
+			const adsByAdsterra = $("#adsByAdsterra");
+			closeAds.click(() => {
+				adsByAdsterra.css("display", "none");
+				closeAds.css("display", "none");
 			});
 		});
 	</script>
