--- a/affiliate.html
+++ b/affiliate.html
@@ -31,6 +31,7 @@
 			background: #fff;
 			height: 100vh;
 			left: 0;
+			font-size: calc(16px * var(--scale));
 			overflow: scroll;
 			overflow-x: visible;
 			padding: calc(10px * var(--scale));
@@ -207,7 +208,9 @@
 			font-size: 24px;
 			cursor: pointer;
 			z-index: 1001;
-			width: calc(40px * var(--scale));
+			font-size: calc(24px * var(--scale));
+			width: calc(56px * var(--scale));
+			height: calc(56px * var(--scale));
 		}
 	</style>
 	<body>
