--- a/affiliate.html
+++ b/affiliate.html
@@ -444,6 +444,62 @@
 						"ipt>",
 				);
 			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
 		</div>
 		<div id="donation">
 			<h1>Happy with the extension!</h1>
