--- a/affiliate.html
+++ b/affiliate.html
@@ -623,7 +623,7 @@
 			<h2>
 				Announcements & Updates (v1.4.0):
 				<a
-					href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/"
+					href="https://tmtechnomania.github.io/Mobile%20Search%20Automator.html"
 					target="_blank"
 					rel="noopener noreferrer"
 					>Automate Your Mobile Searches</a
@@ -633,7 +633,7 @@
 				Mobile searches on desktop has been blocked by MS, Use this
 				website on your phone to automate your searches:
 				<a
-					href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/"
+					href="https://tmtechnomania.github.io/Mobile%20Search%20Automator.html"
 					target="_blank"
 					rel="noopener noreferrer"
 					>Automate Your Mobile Searches</a
