--- a/affiliate.html
+++ b/affiliate.html
@@ -218,7 +218,7 @@
 		<div id="adsByAdsterra">
 			<h2>
 				This section helps us keep the extension running, consider
-				enabling ads on this page or consider giving donations to keep this extension running!!
+				enabling ads on this page or consider giving donations to keep this extension running!! Note: I don't suggest clicking on any ads!!
 			</h2>
 			<script type="text/javascript">
 				atOptions = {
