--- a/affiliate.html
+++ b/affiliate.html
@@ -217,9 +217,93 @@
 		<div id="closeAds">x</div>
 		<div id="adsByAdsterra">
 			<h2>
-				This section helps us keep the extension running, consider
+				This section helps me keep the extension running, consider
 				enabling ads on this page or consider giving donations to keep this extension running!! Note: I don't suggest clicking on any ads!!
 			</h2>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
 			<script type="text/javascript">
 				atOptions = {
 					key: "e8105a7670134344bc98b1ea9766961c",
