--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"></script>
-		<script
-			async
-			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-			crossorigin="anonymous"></script>
+		<meta name="clckd" content="de19191372dad7a33a7d1c831a0dafc8" />
 	</head>
 	<style>
 		* {
